Video integrated and connected to interface interactions (start, stop, jumpToTime) git push

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -64,6 +64,10 @@ body{
     -ms-transition: background-color 3000ms linear;
     transition: background-color 3000ms linear;
 
+    #bottom, &.empty #bottom{
+        background: @olympicBlue;
+    }
+
     &.pity{
         background: @pity;
         #bottom{
@@ -272,7 +276,6 @@ h3{
         width: 100%;
         position: fixed;
         bottom: 0px;
-        background: @olympicBlue;
         -webkit-transition: background-color 3000ms linear;
         -moz-transition: background-color 3000ms linear;
         -o-transition: background-color 3000ms linear;
@@ -593,6 +596,9 @@ svg{
 /** Video **/
 
 #player{
+    video{
+        width: 100%;
+    }
     width: 100%;
 }
 
